--- a/frontend/main.html
+++ b/frontend/main.html
@@ -151,9 +151,9 @@
                 </div>
             </div>
             <div id="products" class="row justify-content-between m-0 p-0 my-4 py-2">
-                <div class="m-0 p-0 row">
-                    <h4 class="fw-normal m-0 p-0">Предлагаем</h1>
-                        <h2 class="text-danger text-nowrap fw-medium m-0 p-0">НАШУ ПРОДУКЦИЮ</h1>
+                <div class="row">
+                    <h4 class="fw-normal">Предлагаем</h1>
+                        <h2 class="text-danger text-nowrap fw-medium">НАШУ ПРОДУКЦИЮ</h1>
                 </div>
                 <div id="product-id"
                     class="product row justify-content-center align-items-center col-md-4 col-lg-3 py-2 m-0 p-2">
@@ -168,10 +168,11 @@
                         <div class="row justify-content-between align-items-center m-0 py-1">
                             <div
                                 class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0">$ 5199</p>
+                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
                             </div>
                             <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button class="btn btn-danger text-center p-0 m-0 w-100 fs-5">Купить</button>
+                                <button
+                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
                             </div>
                         </div>
                     </div>
@@ -189,10 +190,11 @@
                         <div class="row justify-content-between align-items-center m-0 py-1">
                             <div
                                 class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0">$ 5199</p>
+                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
                             </div>
                             <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button class="btn btn-danger text-center p-0 m-0 w-100 fs-5">Купить</button>
+                                <button
+                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
                             </div>
                         </div>
                     </div>
@@ -210,10 +212,11 @@
                         <div class="row justify-content-between align-items-center m-0 py-1">
                             <div
                                 class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0">$ 5199</p>
+                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
                             </div>
                             <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button class="btn btn-danger text-center p-0 m-0 w-100 fs-5">Купить</button>
+                                <button
+                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
                             </div>
                         </div>
                     </div>
@@ -231,47 +234,73 @@
                         <div class="row justify-content-between align-items-center m-0 py-1">
                             <div
                                 class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0 fs-4">$ 5199</p>
+                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
                             </div>
                             <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-2 fs-5 rounded-4 fs-4">Купить</button>
+                                <button
+                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
                             </div>
                         </div>
                     </div>
                 </div>
 
             </div>
-            <div id="about" class="row justify-content-between m-0 p-0 my-4 py-2">
-
-                <div class="col col-md-6 m-0 p-0">
-                    <div class="m-0 p-0 row">
-                        <h4 class="fw-normal m-0 p-0">О нашей компании</h4>
-                        <h2 class="text-danger text-nowrap fw-medium m-0 p-0 mb-2">НЕМНОГО О НАС</h2>
-                    </div>
-                    <p class="fs-6 fw-light text-wrap">
-                        Задача организации, в особенности же граница обучения кадров играет определяющее значение для
-                        существующих финансовых и административных условий. Внезапно, предприниматели в сети интернет
-                        функционально разнесены на независимые элементы.
-                    </p>
-                    <p class="fs-6 fw-light text-wrap">
-                        Вот вам яркий пример современных тенденций — социально-экономическое развитие обеспечивает
-                        актуальность направлений прогрессивного развития. Внезапно, предприниматели в сети интернет
-                        функционально разнесены на независимые элементы.
-                    </p>
-                    <div class="m-0 p-0 mb-2 ">
-                        <button
-                            class="w-25 btn btn-outline-danger text-center rounded-4 p-0 m-0 w-25 fs-5">Подробнее</button>
+            <div id="about us" class="row justify-content-between m-0 p-0 mt-5 py-2">
+                <div class="row col-12 col-lg-7 m-0 p-0">
+                    <div class="col m-0 p-0 row">
+                        <h4 class="fw-normal">О нашей компании</h4>
+                        <h2 class="text-danger text-nowrap fw-medium mb-2">НЕМНОГО О НАС</h2>
+                        <p class="fs-6 fw-light text-wrap py-2">
+                            Задача организации, в особенности же граница обучения кадров играет определяющее значение
+                            для
+                            существующих финансовых и административных условий. Внезапно, предприниматели в сети
+                            интернет
+                            функционально разнесены на независимые элементы.
+                        </p>
+                        <p class="fs-6 fw-light text-wrap py-2">
+                            Вот вам яркий пример современных тенденций — социально-экономическое развитие обеспечивает
+                            актуальность направлений прогрессивного развития. Внезапно, предприниматели в сети интернет
+                            функционально разнесены на независимые элементы.
+                        </p>
+                        <div class="col-6 mb-2">
+                            <button class=" btn btn-outline-danger text-center rounded-4 p-1 fs-4">Подробнее</button>
+                        </div>
                     </div>
                 </div>
-                <div class="row col-md-6 m-0 p-0 rounded-4">
-                    <div class="col rounded-4 m-0 p-0">
+                <div class=" row col-12 col-lg-5 rounded-4">
+                    <div class="d-none d-lg-block col rounded-4">
                         <img src="assets/erikus.jpg" class="img-fluid" alt="">
                     </div>
-                    <div class="col rounded-4 p-0" style="margin:0;margin-left:5px">
+                    <div class="d-none d-lg-block col rounded-4">
                         <img src="assets/eximyx.jpg" class="img-fluid" alt="">
                     </div>
                 </div>
-            </div>
+                <div class="row m-0 m-0 justify-content-between mt-5">
+                    <div class="col-sm-12 col-md-4 m-0 p-1">
+                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
+                            <h4 class="fs-4 mt-3">Качество</h4>
+                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
+                                анализа новых предложений.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 m-0 p-1">
+                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
+                            <h4 class="fs-4 mt-3 text-wrap">Профессиональный подход</h4>
+                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
+                                анализа
+                                новых предложений.</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-12 col-md-4 m-0 p-1">
+                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
+                            <h4 class="fs-4 mt-3 text-wrap">Профессиональный подход</h4>
+                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
+                                анализа
+                                новых предложений.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>  
         </div>
 </body>
 
