--- a/frontend/main.html
+++ b/frontend/main.html
@@ -6,302 +6,37 @@
     <title>Document</title>
 </head>
 
-<d>
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <script src="https://code.jquery.com/jquery-3.7.1.js"></script>
-
-    <link rel="stylesheet" href="https://code.jquery.com/ui/1.13.2/themes/base/jquery-ui.css">
-    <script src="https://code.jquery.com/ui/1.13.2/jquery-ui.js"></script>
-
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
-        integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.2/js/bootstrap.bundle.min.js"
-        integrity="sha512-X/YkDZyjTf4wyc2Vy16YGCPHwAY8rZJY+POgokZjQB2mhIRFJCckEGc6YyX9eNsPfn0PzThEuNs+uaomE5CO6A=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.css">
-    <script src="https://cdn.jsdelivr.net/npm/summernote@0.8.18/dist/summernote.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
-        integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
-        crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-
-    <link href="https://cdn.datatables.net/v/bs5/dt-1.13.8/r-2.5.0/sl-1.7.0/datatables.min.css" rel="stylesheet">
-
-    <script src="https://cdn.datatables.net/v/bs5/dt-1.13.8/r-2.5.0/sl-1.7.0/datatables.min.js"></script>
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <link href="https://fonts.cdnfonts.com/css/commissioner-2" rel="stylesheet">
-</d>
-<style>
-    .p {
-        font-family: 'Commissioner', sans-serif;
-        font-family: 'Commissioner Flair', sans-serif;
-        font-family: 'Commissioner Loud', sans-serif;
-    }
-
-    .dark-image {
-        filter: brightness(70%);
-        background-position: center;
-        background-image: url('assets/creative.jpg');
-        object-fit: cover;
-        background-position: center;
-        top: 0;
-        margin: 0;
-        padding: 0;
-    }
-
-    .product {
-        margin: 0;
-        margin-top: 20px;
-        margin-left: 0px;
-    }
-</style>
-
 <body style="background-color: #FBF8F4;">
     <div class="container p-0">
-        <nav class="d-lg-block d-none">
-            <div
-                class="row py-1 justify-content-between align-items-center border-bottom border-2 border-opacity-25 border-black">
-                <div class="col-md-2 col-lg-2 col-xl-2 col-xxl-2 row justify-content-between align-items-end ">
-                    <p class="align-items-center fw-bold text-secondary text-nowrap col-12 fs-6 m-0">
-                        <img srcset="assets/benjaminmoore-icon.png 2300w">
-                        Benjamin Moore
-                    </p>
-                </div>
-                <div class="col-md-6 col-lg-6 col-xl-6 col-xxl-4 row m-0 justify-content-between align-items-center ">
-                    <p class="text-center text-secondary fs-6 col-sm-1 col-md-2 col-lg-2 col-xl-2 m-0 p-0">
-                        Каталог
-                    </p>
-                    <p class="text-center text-secondary fs-6 col-sm-1 col-md-2 col-lg-3 col-xl-2 m-0 p-0">
-                        Новости
-                    </p>
-                    <p class="text-center text-secondary fs-6 col-sm-1 col-md-2 col-lg-3 col-xl-3  m-0 p-0">
-                        Калькулятор
-                    </p>
-                    <p class="text-center text-nowrap text-secondary fs-6 col-md-2 col-lg-3 col-xl-3 m-0 p-0">
-                        Страницы
-                    </p>
-                </div>
-                <div class=" col-md-4 col-lg-4 col-xl-4 justify-content-between row align-items-center ">
-                    <div class=" col-lg-3 col-xl-8 row" style="font-size:12px">
-                        <p class="text-nowrap text-secondary m-0">
-                            <i class="fa fa-phone text-danger"></i>
-                            +375 (29) 608-40-00
-                        </p>
-                        <p class="text-secondary text-nowrap m-0">
-                            <i class="fa fa-clock text-danger"></i>
-                            ПН — ПТ, 10:00 — 19:00
-                        </p>
-                    </div>
-                    <div
-                        class="py-lg-1 py-1 btn btn-danger px-0 p-0 m-0  col-md-5 col-lg-4 justify-content-center align-items-center ">
-                        <p class="text-center text-nowrap text-white fs-6 m-0 py-1">
-                            Войти
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </nav>
-        <nav class="container d-lg-none border-bottom border-2 border-opacity-25 border-black">
-            <div class="col-sm-12 py-1 row justify-content-between align-items-center ">
-                <div class="col-sm-2 col-1 row justify-content-start   align-items-end ">
-                    <p class="align-items-center fw-bold text-secondary text-nowrap fs-6 m-0">
-                        <img srcset="assets/benjaminmoore-icon.png 1150w">
-                        Benjamin Moore
-                    </p>
-                </div>
-                <div class="col-sm-1 col-2 justify-content-end">
-                    <i class="fa fa-bars"></i>
-                </div>
-            </div>
-        </nav>
-
-
-
         <div id="content" class="container p-0 ">
-            <div id="image-wrapper" class="row rounded-4 border border-1 bg-light my-1 position-relative" alt="">
-                <div class="col-sm-4 clearfix"></div>
-                <div class="container-fluid position-absolute h-100 rounded-4 "
-                    style="background-image: url('assets/creative.jpg') ;background-position: center;background-size: cover; background-repeat: no-repeat; filter:brightness(75%)">
-                    <img src="" class="img-fluid" alt="">
-                </div>
-                <div class="position-relative py-5 my-3">
-                    <div class="col-2 clearfix"></div>
-                    <div class="col-sm-4 py-5 m-2">
-                        <p class="fs-4 text-danger text-nowrap fw-medium text-opacity-100 ">Benjamin Moore
-                            <br>
-                            <span class="text-white text-opacity-100">Американские краски
-                                <br>
-                                <span class="fs-6 text-wrap">
-                                    Открой для себя мир удивительных красок!
-                                </span>
-                        </p>
-                    </div>
-                    <div class="row col-sm-12 justify-content-between align-items-center m-2 p-0">
-                        <div class="col-5 col-sm-3 col-md-2 btn btn-danger rounded-4 my-1">Купить</div>
-                        <div
-                            class="col-5 col-sm-3 col-md-2 btn btn-outline-danger text-nowrap text-danger rounded-4 m-0">
-                            Все цвета</div>
-                        <div class="col-5 col-sm-4 col-md-6 clearfix m-0 p-0"> </div>
-                    </div>
-                </div>
-            </div>
-            <div id="products" class="row justify-content-between m-0 p-0 my-4 py-2">
-                <div class="row">
-                    <h4 class="fw-normal">Предлагаем</h1>
-                        <h2 class="text-danger text-nowrap fw-medium">НАШУ ПРОДУКЦИЮ</h1>
-                </div>
-                <div id="product-id"
-                    class="product row justify-content-center align-items-center col-md-4 col-lg-3 py-2 m-0 p-2">
-                    <div class="row border-2 border rounded-4 align-items-center align-self-center m-0 p-0">
-                        <img src="assets/краска.png" class="img-fluid rounded-4 align-self-center" alt="">
-                        <div class="text-center fs-5 p-0 m-0">
-                            <p class="m-0 py-0">Ben® Premium Interior Latex Semi-Gloss Finish (W627)</p>
-                        </div>
-                        <div class="text-center fw-light fs-6 p-0 m-0">
-                            <p class="m-0 py-2">Степень блеска «полуглянцевая»</p>
-                        </div>
-                        <div class="row justify-content-between align-items-center m-0 py-1">
-                            <div
-                                class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
-                            </div>
-                            <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button
-                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="product-id"
-                    class="product row justify-content-center align-items-center col-md-4 col-lg-3 py-2 m-0 p-2">
-                    <div class="row border-2 border rounded-4 align-items-center align-self-center m-0 p-0">
-                        <img src="assets/краска.png" class="img-fluid rounded-4 align-self-center" alt="">
-                        <div class="text-center fs-5 p-0 m-0">
-                            <p class="m-0 py-0">Ben® Premium Interior Latex Semi-Gloss Finish (W627)</p>
-                        </div>
-                        <div class="text-center fw-light fs-6 p-0 m-0">
-                            <p class="m-0 py-2">Степень блеска «полуглянцевая»</p>
-                        </div>
-                        <div class="row justify-content-between align-items-center m-0 py-1">
-                            <div
-                                class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
-                            </div>
-                            <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button
-                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="product-id"
-                    class="product row justify-content-center align-items-center col-md-4 col-lg-3 py-2 m-0 p-2">
-                    <div class="row border-2 border rounded-4 align-items-center align-self-center m-0 p-0">
-                        <img src="assets/краска.png" class="img-fluid rounded-4 align-self-center" alt="">
-                        <div class="text-center fs-5 p-0 m-0">
-                            <p class="m-0 py-0">Ben® Premium Interior Latex Semi-Gloss Finish (W627)</p>
-                        </div>
-                        <div class="text-center fw-light fs-6 p-0 m-0">
-                            <p class="m-0 py-2">Степень блеска «полуглянцевая»</p>
-                        </div>
-                        <div class="row justify-content-between align-items-center m-0 py-1">
-                            <div
-                                class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
-                            </div>
-                            <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button
-                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div id="product-id"
-                    class="d-md-none d-lg-block product row justify-content-center align-items-center col-md-4 col-lg-3 py-2 m-0 p-2">
-                    <div class="row border-2 border rounded-4 align-items-center align-self-center m-0 p-0">
-                        <img src="assets/краска.png" class="img-fluid rounded-4 align-self-center" alt="">
-                        <div class="text-center fs-5 p-0 m-0">
-                            <p class="m-0 py-0">Ben® Premium Interior Latex Semi-Gloss Finish (W627)</p>
-                        </div>
-                        <div class="text-center fw-light fs-6 p-0 m-0">
-                            <p class="m-0 py-2">Степень блеска «полуглянцевая»</p>
-                        </div>
-                        <div class="row justify-content-between align-items-center m-0 py-1">
-                            <div
-                                class="col-5 col-sm-5 col-md-5 col-lg-3 justify-content-center align-items-end p-0 m-0">
-                                <p class="text-center text-nowrap p-0 m-0 fs-5">$ 5199</p>
-                            </div>
-                            <div class="col-5 col-sm-5 col-md-6 col-lg-6 align-items-center m-0 p-0">
-                                <button
-                                    class="btn btn-danger text-center p-0 m-0 w-100 h-25 py-1 rounded-4 fs-5">Заказать</button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
 
-            </div>
-            <div id="about us" class="row justify-content-between m-0 p-0 mt-5 py-2">
-                <div class="row col-12 col-lg-7 m-0 p-0">
-                    <div class="col m-0 p-0 row">
-                        <h4 class="fw-normal">О нашей компании</h4>
-                        <h2 class="text-danger text-nowrap fw-medium mb-2">НЕМНОГО О НАС</h2>
-                        <p class="fs-6 fw-light text-wrap py-2">
-                            Задача организации, в особенности же граница обучения кадров играет определяющее значение
-                            для
-                            существующих финансовых и административных условий. Внезапно, предприниматели в сети
-                            интернет
-                            функционально разнесены на независимые элементы.
-                        </p>
-                        <p class="fs-6 fw-light text-wrap py-2">
-                            Вот вам яркий пример современных тенденций — социально-экономическое развитие обеспечивает
-                            актуальность направлений прогрессивного развития. Внезапно, предприниматели в сети интернет
-                            функционально разнесены на независимые элементы.
-                        </p>
-                        <div class="col-6 mb-2">
-                            <button class=" btn btn-outline-danger text-center rounded-4 p-1 fs-4">Подробнее</button>
-                        </div>
-                    </div>
-                </div>
-                <div class=" row col-12 col-lg-5 rounded-4">
-                    <div class="d-none d-lg-block col rounded-4">
-                        <img src="assets/erikus.jpg" class="img-fluid" alt="">
-                    </div>
-                    <div class="d-none d-lg-block col rounded-4">
-                        <img src="assets/eximyx.jpg" class="img-fluid" alt="">
-                    </div>
-                </div>
-                <div class="row m-0 m-0 justify-content-between mt-5">
-                    <div class="col-sm-12 col-md-4 m-0 p-1">
-                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
-                            <h4 class="fs-4 mt-3">Качество</h4>
-                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
-                                анализа новых предложений.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 m-0 p-1">
-                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
-                            <h4 class="fs-4 mt-3 text-wrap">Профессиональный подход</h4>
-                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
-                                анализа
-                                новых предложений.</p>
-                        </div>
-                    </div>
-                    <div class="col-sm-12 col-md-4 m-0 p-1">
-                        <div class="col border-top border-2 border-opacity-25 border-danger-subtle m-0 p-0">
-                            <h4 class="fs-4 mt-3 text-wrap">Профессиональный подход</h4>
-                            <p class="text-wrap">Предварительные выводы неутешительны: существующая теория требует
-                                анализа
-                                новых предложений.</p>
-                        </div>
-                    </div>
-                </div>
-            </div>  
         </div>
+    </div>
 </body>
+
+<script>
+
+    const swiper = new Swiper('.swiper', {
+        // Optional parameters
+        direction: 'horizontal',
+        loop: true,
+
+        // If we need pagination
+        //   pagination: {
+        //     el: '.swiper-pagination',
+        //   },
+
+        // Navigation arrows
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+
+        // And if we need scrollbar
+        //   scrollbar: {
+        //     el: '.swiper-scrollbar',
+        //   },
+    });
+</script>
 
 </html>
